--- a/app/src/main/res/layout/dialog_inst_detail.xml
+++ b/app/src/main/res/layout/dialog_inst_detail.xml
@@ -67,6 +67,7 @@
     <TextView
         android:id="@+id/script_text"
         android:layout_width="match_parent"
+        android:typeface="monospace"
         android:layout_height="wrap_content" />
 
     <TextView
