--- a/app/src/main/res/layout/activity_base_view_pager.xml
+++ b/app/src/main/res/layout/activity_base_view_pager.xml
@@ -18,6 +18,7 @@
             app:layout_collapseMode="parallax"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:titleMarginTop="15dp" />
+        <!--app:layout_scrollFlags="scroll|enterAlways"-->
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
