--- a/app/src/main/res/layout/dialog_recharge.xml
+++ b/app/src/main/res/layout/dialog_recharge.xml
@@ -3,18 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="?attr/dialogPreferredPadding">
+    android:paddingStart="?attr/dialogPreferredPadding"
+    android:paddingEnd="?attr/dialogPreferredPadding">
 
-    <Button
-        android:id="@+id/btn_recharge"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/text_recharge" />
+        android:text="@string/text_recharege_pre_read"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold" />
 
     <Button
+        android:id="@+id/btn_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="@string/text_guide"
+        android:theme="@style/MaterialButton.Blue" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:text="@string/text_purchase_act_code"
-        android:textColor="@color/blue_500" />
+        android:layout_marginBottom="10dp"
+        android:text="@string/text_unlock_functions"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/text_advan_include_func"
+        android:textColor="@color/primary_text" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/text_purchase_recharge_code_msg" />
+
+    <TextView
+        android:id="@+id/prices_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/primary_text" />
 </LinearLayout>
