--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -13,7 +13,7 @@
         android:layout_height="127dp"
         android:layout_margin="10dp"
         android:layout_marginBottom="20dp"
-        android:background="@color/app_foround"
+        android:background="@color/app_foreground"
         android:baselineAligned="false"
         android:elevation="2dp"
         android:gravity="center_vertical"
@@ -52,13 +52,28 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/user_name_text"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/text_click_to_login"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:gravity="center_vertical"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/user_name_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/red_heard"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="❤"
+                        android:textColor="@color/red_500"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/user_vip_text"
@@ -78,9 +93,9 @@
             android:layout_height="wrap_content">
 
             <!--<cn.vove7.jarvis.view.custom.IconView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/ic_home_black_24dp" />-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/ic_home_black_24dp" />-->
         </RelativeLayout>
 
     </LinearLayout>
