--- a/app/src/main/res/layout/item_mine_features.xml
+++ b/app/src/main/res/layout/item_mine_features.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="2dp"
-        android:background="@color/app_foround"
+        android:background="@color/app_foreground"
         android:elevation="0.6dp">
 
         <LinearLayout
