--- a/app/src/main/res/layout/item_of_settings_child.xml
+++ b/app/src/main/res/layout/item_of_settings_child.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/app_foround"
+    android:background="@color/app_foreground"
     android:minHeight="48dp"
     android:orientation="horizontal">
 
