--- a/app/src/main/res/layout/item_of_settings_group.xml
+++ b/app/src/main/res/layout/item_of_settings_group.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@color/app_foround"
+        android:background="@color/app_foreground"
         android:orientation="vertical">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
