--- a/app/src/main/res/layout/activity_abc_header.xml
+++ b/app/src/main/res/layout/activity_abc_header.xml
@@ -22,6 +22,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:cardCornerRadius="5dp"
             app:cardElevation="3dp">
 
