参数校验 指令设置存储

--- a/app/src/main/res/layout/dialig_edit_marked_data.xml
+++ b/app/src/main/res/layout/dialig_edit_marked_data.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:paddingStart="?attr/dialogPreferredPadding"
     android:paddingEnd="?attr/dialogPreferredPadding">
@@ -41,8 +43,8 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:gravity="top|start"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="top|start" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
@@ -54,11 +56,11 @@
     </LinearLayout>
 
     <Spinner
-        android:visibility="gone"
         android:id="@+id/script_lang"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:entries="@array/list_script_type">
+        android:entries="@array/list_script_type"
+        android:visibility="gone">
 
     </Spinner>
 
