--- a/app/src/main/res/layout/dialog_recharge.xml
+++ b/app/src/main/res/layout/dialog_recharge.xml
@@ -39,6 +39,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:text="@string/text_purchase_ways"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/text_purchase_recharge_code_msg" />
 
     <TextView
