适配P 修复唤醒

--- a/Common/src/main/res/values/colors.xml
+++ b/Common/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="p_green_dark">#087D42</color>
 
     <color name="fff">#fff</color>
+    <color name="trans">#00000000</color>
 </resources>
