--- a/app/src/main/res/layout/activity_new_inst.xml
+++ b/app/src/main/res/layout/activity_new_inst.xml
@@ -21,11 +21,12 @@
         <!--app:layout_scrollFlags="scroll"-->
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:scrollbars="none"
         android:padding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -188,12 +189,12 @@
                 android:id="@+id/code_view"
                 android:layout_width="match_parent"
                 android:minHeight="100dp"
-                android:layout_height="500dp">
+                android:layout_height="200dp">
 
             </io.github.kbiakov.codeview.CodeView>
 
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
     <include
         android:id="@+id/bottom_sheet_view"
