添加shortcut/唤醒/指令

--- a/app/src/main/res/layout/bottom_sheet_list_whit_toolbar.xml
+++ b/app/src/main/res/layout/bottom_sheet_list_whit_toolbar.xml
@@ -28,9 +28,8 @@
             android:focusable="true"
             app:contentInsetStart="0dp"
             app:contentInsetStartWithNavigation="-5dp"
-            app:navigationIcon="@drawable/ic_close_black_24dp"
-            app:title=""
-            app:titleTextColor="#757575" />
+            app:navigationIcon="@drawable/ic_close"
+            app:titleTextColor="@color/secondary_text" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
