编辑器加入函数grid

--- a/app/src/main/res/layout/editor_tool_bar.xml
+++ b/app/src/main/res/layout/editor_tool_bar.xml
@@ -34,6 +34,7 @@
         android:id="@+id/functions_grid"
         android:layout_width="match_parent"
         android:layout_height="227dp"
+        android:visibility="gone"
         android:orientation="vertical" >
 
         <android.support.v4.view.ViewPager
