加入网络api（示例参考js编辑器中的'天气.js'） 加入屏幕文字提取(同步最新数据后，使用文字提取 ) 加入数据自动更新和一键更新(高级中) 加入指令详情代码复制 加入百度语言处理
-------
提取数据同步操作至DataUpdator
修改ParseEngine 参数isFollow

--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/google_blue</item>
         <item name="android:navigationBarColor">@color/p_green</item>
 
-        <!--<item name="md_color_title">@color/colorAccent</item>-->
+        <!--<item name="md_color_title">@color/google_blue</item>-->
         <!--<item name="md_color_content">@color/your_color</item>-->
         <item name="md_corner_radius">16dp</item>
         <item name="actionModeStyle">@style/MyActionMode</item>
