--- a/app/src/main/res/layout/activity_inst_detail.xml
+++ b/app/src/main/res/layout/activity_inst_detail.xml
@@ -6,8 +6,8 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -32,10 +32,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll"
                 app:navigationIcon="@drawable/ic_close_white_24dp"
                 app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
                 app:title=""
-                app:layout_scrollFlags="scroll"
                 app:titleTextColor="#fff" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -59,9 +59,8 @@
                 android:layout_height="wrap_content"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_instructions"
-                android:textColor="@color/colorAccent"
+                android:textColor="?attr/colorAccent"
                 app:layout_collapseMode="parallax"
-
                 app:layout_collapseParallaxMultiplier="0.8"
                 app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed" />
 
@@ -76,7 +75,8 @@
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_examples"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent"
+                />
 
             <TextView
                 android:id="@+id/examples_text"
@@ -90,7 +90,8 @@
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_regex"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent"
+                />
 
             <TextView
                 android:id="@+id/regs_text"
@@ -104,7 +105,8 @@
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_script"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent"
+                />
 
             <io.github.kbiakov.codeview.CodeView
                 android:id="@+id/script_text"
@@ -113,12 +115,22 @@
                 android:typeface="monospace" />
 
             <TextView
+                android:id="@+id/copy_script"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:background="?attr/selectableItemBackground"
+                android:text="点击复制"
+                android:textColor="@color/p_green"
+                android:textSize="12sp" />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_script_type"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent" />
 
             <TextView
                 android:id="@+id/script_type_text"
@@ -132,7 +144,7 @@
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="@string/text_version_code"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent" />
 
             <TextView
                 android:id="@+id/version_text"
@@ -145,14 +157,14 @@
                 android:layout_marginTop="10dp"
                 android:labelFor="@id/example_text"
                 android:text="跟随操作"
-                android:textColor="@color/colorAccent" />
+                android:textColor="?attr/colorAccent"/>
 
             <cn.vove7.vtp.view.listview.WrapContentListView
                 android:id="@+id/follow_list"
                 android:layout_width="match_parent"
-                android:minHeight="50dp"
                 android:layout_height="wrap_content"
-                android:divider="#00000000" />
+                android:divider="#00000000"
+                android:minHeight="50dp" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
