--- a/app/src/main/res/layout/item_of_funcs.xml
+++ b/app/src/main/res/layout/item_of_funcs.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackgroundBorderless"
-    android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="10dp">
 
+    <!--android:gravity="center_vertical"-->
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
