--- a/app/src/main/res/layout/item_of_exec_queue.xml
+++ b/app/src/main/res/layout/item_of_exec_queue.xml
@@ -20,6 +20,6 @@
         android:id="@+id/param_text"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:hint="@string/text_optional"
+        android:hint="多个参数可以以,分隔"
         android:maxLines="1" />
 </LinearLayout>
