--- a/app/src/main/res/layout/dialog_pick_text.xml
+++ b/app/src/main/res/layout/dialog_pick_text.xml
@@ -12,6 +12,9 @@
         android:id="@+id/words_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        app:horizontal_Space="2dp"
+        app:vertical_Space="2dp"
         app:align="left" />
 </android.support.v7.widget.CardView>
