--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/google_blue</item>
         <item name="android:navigationBarColor">@color/p_green</item>
         <item name="md_corner_radius">16dp</item>
-
+        <item name="dialogTheme">@style/Dialog_Fullscreen</item>
         <!--<item name="md_color_content">@color/your_color</item>-->
         <item name="actionModeStyle">@style/MyActionMode</item>
         <!--<item name="android:colorControlHighlight">@color/colorPrimary</item>-->
@@ -16,7 +16,11 @@
 
         <item name="height">?attr/actionBarSize</item>
     </style>
-
+    <style name="Dialog_Fullscreen">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
     <style name="TranslucentStatus" parent="AppTheme">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
