--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
-    android:orientation="vertical">
+    app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="320dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="2dp"
+        app:layout_behavior="@string/bottom_sheet_behavior">
 
-        <Button
-            android:layout_width="wrap_content"
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="截屏"
-            android:theme="@style/MaterialButton.White" />
+            android:visibility="invisible"
+            android:indeterminate="true" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="屏幕识别"
-            android:theme="@style/MaterialButton.White" />
+        <cn.vove7.vtp.view.listview.BottomSheetListView
+            android:id="@+id/bottom_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:divider="#00000000"
+            app:layout_behavior="@string/bottom_sheet_behavior" />
+    </android.support.v7.widget.CardView>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="文字提取"
-            android:theme="@style/MaterialButton.White" />
-    </LinearLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
