--- a/app/src/main/res/layout/item_normal_icon_title.xml
+++ b/app/src/main/res/layout/item_normal_icon_title.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:src="@color/blue_500"
             android:visibility="invisible" />
 
@@ -23,6 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:orientation="vertical"
             android:padding="5dp">
 
