--- a/app/src/main/res/layout/item_normal_icon_title.xml
+++ b/app/src/main/res/layout/item_normal_icon_title.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:padding="10dp">
+        android:paddingStart="10dp"
+        android:paddingTop="7dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="7dp">
 
         <ImageView
             android:id="@+id/icon"
