--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,10 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+    <style name="TransparentDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
     <style name="TranslucentStatus" parent="AppTheme">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
@@ -36,7 +40,8 @@
         <!--<item name="android:windowSharedElementsUseOverlay">false</item>-->
     </style>
 
-    <style name="ScreenPicker" parent="Theme.AppCompat.Light.NoActionBar">
+    <!--文字提取Activity-->
+    <style name="ScreenPicker" parent="NoActionBar">
         <item name="android:windowBackground">@color/trans</item>
         <item name="md_corner_radius">16dp</item>
         <item name="android:statusBarColor">@color/trans</item>
