在其他App内由于麦克风占用关闭唤醒时, 熄屏开启唤醒

--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -15,6 +15,7 @@
         app:behavior_peekHeight="500dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="2dp"
+        android:fitsSystemWindows="true"
         app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
