--- a/app/src/main/res/layout/quick_wakeup_widget.xml
+++ b/app/src/main/res/layout/quick_wakeup_widget.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="@dimen/widget_margin">
 
     <TextView
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
         android:drawableTop="@mipmap/ic_launcher_vassist"
         android:gravity="center"
         android:text="@string/shortcut_wakeup"
