--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <android.support.v7.widget.CardView
@@ -13,7 +13,7 @@
         android:layout_marginBottom="20dp"
         app:behavior_hideable="true"
         app:behavior_peekHeight="500dp"
-        app:cardCornerRadius="6dp"
+        app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
         android:fitsSystemWindows="true"
         app:layout_behavior="@string/bottom_sheet_behavior">
@@ -35,14 +35,13 @@
                 android:id="@+id/bottom_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
                 android:divider="#00000000"
                 app:layout_behavior="@string/bottom_sheet_behavior" />
 
             <ImageView
                 android:id="@+id/voice_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:background="@color/trans"
