--- a/app/src/main/res/drawable/pickable_bg.xml
+++ b/app/src/main/res/drawable/pickable_bg.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:state_checked="false">
         <shape>
-            <solid android:color="#000" />
+            <solid android:color="@color/green_900" />
             <corners android:radius="10dp" />
         </shape>
     </item>
