--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <android.support.v7.widget.CardView
@@ -15,11 +16,11 @@
         app:behavior_peekHeight="500dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
-        android:fitsSystemWindows="true"
         app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:fitsSystemWindows="true"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -43,8 +44,9 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="6dp"
                 android:background="@color/trans"
+                android:fitsSystemWindows="true"
                 android:padding="8dp"
                 android:src="@drawable/ic_keyboard_voice_black_24dp" />
         </LinearLayout>
