--- a/Common/src/main/res/drawable/bg_screen_text_high_light.xml
+++ b/Common/src/main/res/drawable/bg_screen_text_high_light.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
+    <item android:state_checked="false" android:state_pressed="false">
         <shape>
-            <corners android:radius="8dp" />
+            <corners android:radius="6dp" />
             <solid android:color="#8E6EFAD0" />
         </shape>
     </item>
-    <item android:state_pressed="true">
+    <item android:state_checked="false" android:state_pressed="true">
         <shape>
-            <corners android:radius="8dp" />
+            <corners android:radius="6dp" />
+            <solid android:color="#B56EFAD0" />
+        </shape>
+    </item>
+    <item android:state_checked="true" android:state_pressed="false">
+        <shape android:layout_width="wrap_content">
+            <stroke android:width="2dp" android:color="@color/green_700" />
+            <corners android:radius="6dp" />
+            <!--<solid android:color="#A631EB38" />-->
+        </shape>
+    </item>
+    <item android:state_checked="true" android:state_pressed="true">
+        <shape>
+            <corners android:radius="6dp" />
             <solid android:color="#B56EFAD0" />
         </shape>
     </item>
