--- a/app/src/main/res/menu/menu_code_editor.xml
+++ b/app/src/main/res/menu/menu_code_editor.xml
@@ -61,4 +61,8 @@
         android:id="@+id/menu_sel_code"
         android:title="选择示例脚本"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_api_doc"
+        android:title="API文档"
+        app:showAsAction="never" />
 </menu>
