--- a/app/src/main/res/layout/activity_abc_header.xml
+++ b/app/src/main/res/layout/activity_abc_header.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
