--- a/app/src/main/res/layout/item_normal_icon_title.xml
+++ b/app/src/main/res/layout/item_normal_icon_title.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:paddingStart="10dp"
-        android:paddingTop="7dp"
+        android:paddingTop="5dp"
         android:paddingEnd="10dp"
         android:paddingBottom="7dp">
 
@@ -18,50 +18,57 @@
             android:id="@+id/icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="5dp"
             android:src="@color/blue_500"
-            android:visibility="invisible" />
-
+            android:visibility="visible" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:minHeight="45dp"
+            android:baselineAligned="false">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:minHeight="23dp"
+                        android:text="1234"
+                        android:textColor="@color/primary_text"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <CheckBox
+                        android:id="@+id/check_box"
+                        android:layout_width="wrap_content"
+                        android:layout_height="23dp"
+                        android:layout_marginEnd="7dp"
+                        android:visibility="gone" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/title"
-                    android:layout_width="0dp"
+                    android:id="@+id/sub_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:minHeight="23dp"
-                    android:text="1234"
-                    android:textColor="@color/primary_text"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <CheckBox
-                    android:id="@+id/check_box"
-                    android:layout_width="wrap_content"
-                    android:layout_height="23dp"
-                    android:layout_marginEnd="7dp"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="12sp" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/sub_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="145456"
-                android:textColor="@color/secondary_text"
-                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
